可用状态使用retained

--- a/platformio.ini
+++ b/platformio.ini
@@ -51,7 +51,7 @@ extra_scripts             = scripts/strip-floats.py
 
 lib_deps =
   PubSubClient
-  Nanopb@0.3.9.2
+  Nanopb=https://github.com/nanopb/nanopb.git#nanopb-0.3.9.5
 
 [env:dc1]
 lib_deps    = ${env.lib_deps}
