--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,7 @@ board                     = esp01_1m
 board_build.f_cpu         = 80000000L
 board_build.flash_mode    = dout
 board_build.ldscript      = eagle.flash.1m.ld
-
+lib_ldf_mode              = deep
 ; *** Esp8266 core for Arduino version 2.6.1
 platform                  = espressif8266@2.3.3
 build_flags               = -D NDEBUG
