--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@ board_build.flash_mode    = dout
 board_build.ldscript      = eagle.flash.1m.ld
 
 ; *** Esp8266 core for Arduino version 2.6.1
-platform                  = espressif8266@2.3.3
+platform                  = espressif8266@2.4.0
 build_flags               = -D NDEBUG
                             -mtarget-align
                             -Wl,-Map,firmware.map
@@ -42,7 +42,7 @@ build_flags               = -D NDEBUG
 build_unflags             = -Wall
 
 monitor_speed             = 115200
-upload_speed              = 460800
+upload_speed              = 921600
 ; *** Upload Serial reset method for Wemos and NodeMCU
 upload_resetmethod        = nodemcu
 ;upload_port               = COM5
@@ -54,5 +54,5 @@ lib_deps =
   Nanopb=https://github.com/nanopb/nanopb.git#nanopb-0.3.9.5
 
 [env:dc1]
-lib_deps    = ${env.lib_deps}
-              EspSoftwareSerial@5.0.4
+lib_deps                  = ${env.lib_deps}
+                            EspSoftwareSerial=https://github.com/plerup/espsoftwareserial.git#5.0.4
